[package]
name = "cbc-rs"
version = "0.1.0"
authors = ["Ryosuke Kamesawa <emak.ryo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

nom = { version = "5", features = ["regexp"] }

[dev-dependencies]

glob = "0.3.0"