[package]
name = "cbc-rs"
version = "0.1.0"
authors = ["Ryosuke Kamesawa <emak.ryo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

nom = { version = "5", features = ["regexp"] }
structopt = { version = "0.3", features = ["paw"] }
anyhow = "1.0"
paw = "1.0"
thiserror = "1.0"
typed-arena = "2.0"

[dev-dependencies]

glob = "0.3.0"